test_fm/_test44.nj
//
// method not found
//

public class Main extends Object {

  void f() {
    g();
  }

  public static void main() {
  }

}
